Add git commands

--- a/new-index.html
+++ b/new-index.html
@@ -5,8 +5,15 @@
 <body>
     <h2>brnaching example</h2>
     <p>
-        a few text here
+      Git commands
+
     </p>
+    <ul>
+        <li>Git branch</li>
+        <li>Git merge</li>
+        <li>Git status</li>
+        <li>Git init</li>
+    </ul>
 
 </body>
 </html>
