adds title and first paragraph

--- a/new-index.html
+++ b/new-index.html
@@ -3,9 +3,9 @@
     <title>branch demo</title>
 </head>
 <body>
-    <h2>brnaching example</h2>
+    <h2>Git Collaboration - Caleb</h2>
     <p>
-        a few text here
+        Create a branch from develop branch and name it your Name.
     </p>
 
 </body>
