adds second paragraph to HTML

--- a/new-index.html
+++ b/new-index.html
@@ -7,6 +7,7 @@
     <p>
         Create a branch from develop branch and name it your Name.
     </p>
-
+    <p> Forking is important, which enables you to clone the project in your local repo </p>
+    <h3> Here is a sample project, let do somethings and commit</h3>
 </body>
 </html>
