--- a/new-index.html
+++ b/new-index.html
@@ -14,6 +14,7 @@
         <li>Git status</li>
         <li>Git init</li>
     </ul>
+    <img src="pankaj-patel-ZV_64LdGoao-unsplash.jpg" alt="No pic" width="200px">
 
 </body>
 </html>
