--- a/new-index.html
+++ b/new-index.html
@@ -9,5 +9,11 @@
     </p>
     <p> Forking is important, which enables you to clone the project in your local repo </p>
     <h3> Here is a sample project, let do somethings and commit</h3>
+    <div id="findingDory">
+        <img src="https://m.media-amazon.com/images/I/61bflYRhgjL.jpg" alt="finding Dory Bluray DVD">
+        <caption>Findon Dory is a story about a gil whoe Keeps on forgetting about where Her home is...<strong>Yeah i said it</strong></caption><br>
+        <img src="https://i.insider.com/5766c1ec52bcd028008ca20f?width=800&format=jpeg" alt="Dory smiling">
+        <p> She really smiles despite that</p>
+    </div>
 </body>
 </html>
